<resources>
    <string name="app_name">Movie Fever</string>
    <string name="menu_sort_by_upcoming">Up Coming</string>
    <string name="menu_sort_by_popularity">Popular</string>
    <string name="menu_sort_by_top_rated">Top Rated</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_sort_by_title">Sort By</string>
    <string name="trailer_title">Trailers:</string>
    <string name="more">More:</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release: </string>
    <string name="run_time">Run Time: </string>
    <string name="rating_score">Rating: </string>

    <string name="trailer_1">Trailer 1</string>
    <string name="trailer_2">Trailer 2</string>

    <string name="minutes"> mins</string>
    <string name="max_score">8/10</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="no_trailer_available">No Trailer Available</string>
    <string name="description">Movie Overview. This is where the description located. It has to be long and contains a bunch of texts</string>


    <string name="videos">videos</string>
    <string name="review_title">Review:</string>
    <string name="author">Author</string>
    <string name="review">Sample review. This is a sample review for design purpose only</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <!---
       Error Messages
    -->

    <string name="network_error">Please check network connection</string>
    <string name="error_video_id_invalid">Video ID is Invalid, Please play a different trailer</string>
    <string name="error_video_initialize_failure">Video failed to play</string>
    <string name="error_failed_to_insert">Failed to insert row into </string>
    <string name="error_unknown_uri">Unknown Uri </string>
    <string name="error_not_yet_implemented">Not yet implemented</string>

    <!---
       Warning Messages
    -->

    <string name="no_favorite">Please add movies to Favorites</string>
    <string name="removed_from_favorites">Removed movie from favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="no_review">This movie doesn\'t have any review yet</string>


</resources>
