<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kylezhudev.moviefever.MovieDetailActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/cv_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/primary_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/network_error"
            android:textSize="@dimen/subtitle_text_size_S"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_S"
            android:src="@drawable/ic_info_gray_48dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_error"
            app:layout_constraintRight_toLeftOf="@+id/tv_detail_error"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_error" />

        <ProgressBar
            android:id="@+id/pb_detail_load_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_detail_movie_thumbnail"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginStart="@dimen/margin_S"
            android:layout_marginTop="@dimen/margin_M"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_title" />

        <ImageButton
            android:id="@+id/btn_mark_as_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white_background"
            android:layout_marginStart="@dimen/margin_S"
            android:onClick="onClickAddFavorite"
            android:src="@drawable/ic_star_border_black_48dp"
            app:layout_constraintLeft_toRightOf="@+id/img_detail_movie_thumbnail"
            app:layout_constraintTop_toTopOf="@+id/img_detail_movie_thumbnail" />


        <TextView
            android:id="@+id/tv_released_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_S"
            android:layout_marginTop="@dimen/margin_L"
            android:text="@string/release_date"
            android:textSize="@dimen/subtitle_text_size_M"
            app:layout_constraintLeft_toLeftOf="@+id/btn_mark_as_favorite"
            app:layout_constraintTop_toBottomOf="@+id/btn_mark_as_favorite" />


        <TextView
            android:id="@+id/tv_released_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_S"
            android:textSize="@dimen/subtitle_text_size_M"
            app:layout_constraintLeft_toRightOf="@+id/tv_released_date_title"
            app:layout_constraintTop_toTopOf="@+id/tv_released_date_title"
            tools:text="2017-1-1" />

        <TextView
            android:id="@+id/tv_movie_runtime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_XL"
            android:text="@string/run_time"
            android:textSize="@dimen/subtitle_text_size_M"
            app:layout_constraintLeft_toLeftOf="@+id/tv_released_date_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_released_date_title" />

        <TextView
            android:id="@+id/tv_movie_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_S"
            android:textSize="@dimen/subtitle_text_size_M"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_runtime_title"
            app:layout_constraintLeft_toRightOf="@+id/tv_movie_runtime_title"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_runtime_title"
            tools:text="120min" />

        <TextView
            android:id="@+id/tv_rating_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_XL"
            android:text="@string/rating_score"
            android:textSize="@dimen/subtitle_text_size_M"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_runtime_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_runtime_title" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_S"
            android:textSize="@dimen/subtitle_text_size_M"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating_title"
            app:layout_constraintLeft_toRightOf="@+id/tv_rating_title"
            app:layout_constraintTop_toTopOf="@+id/tv_rating_title"
            tools:text="@string/max_score" />


        <TextView
            android:id="@+id/tv_movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="@dimen/subtitle_text_size_M"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_M"
            android:layout_marginTop="@dimen/margin_M"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_movie_thumbnail"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_M"
            android:text="@string/description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title" />

        <ImageView
            android:id="@+id/img_divider_0"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/margin_S"
            android:layout_marginLeft="@dimen/margin_S"
            android:layout_marginRight="@dimen/margin_S"
            android:layout_marginStart="@dimen/margin_S"
            android:layout_marginTop="@dimen/margin_L"
            android:background="@color/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview" />

        <FrameLayout
            android:id="@+id/fl_youtube"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_S"
            android:layout_marginLeft="@dimen/margin_S"
            android:layout_marginRight="@dimen/margin_S"
            android:layout_marginStart="@dimen/margin_S"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_divider_0">

            <fragment
                android:id="@+id/youTube_fragment"
                android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_L"
                android:layout_marginTop="@dimen/margin_L" />

        </FrameLayout>


        <TextView
            android:id="@+id/tv_trailers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_S"
            android:text="@string/more"
            android:textSize="@dimen/subtitle_text_size_M"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_youtube" />


        <RelativeLayout
            android:id="@+id/relative_layout_detail_trailer_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers_title">


            <com.google.android.youtube.player.YouTubeThumbnailView
                android:id="@+id/trailer1_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_S"
                android:layout_marginStart="@dimen/margin_S"
                android:layout_marginTop="@dimen/margin_M"
                android:scaleType="center"
                android:src="@drawable/no_thumbnail" />


            <TextView
                android:id="@+id/tv_trailer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/trailer1_thumbnail"
                android:textSize="@dimen/subtitle_text_size_M"
                tools:text="@string/trailer_1" />
        </RelativeLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_M"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout_detail_trailer_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</ScrollView>
